SDEV-1741: use HDS pre-release version filtering (#13032)